--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <ul id="episodes-actors">
       </ul>
     </section>
-    <script src="http://unpkg.com/jquery"></script>
-    <script src="http://unpkg.com/axios/dist/axios.js"></script>
+    <script src="https://unpkg.com/jquery"></script>
+    <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <script src="app.js"></script>
 
     </div>
